Change the inner-working on how sidenav works and fix the sidebar not interactable on smaller resolution.

--- a/css/main.css
+++ b/css/main.css
@@ -188,13 +188,18 @@ article{
 
 .sidenav{
     position: fixed;
-    width: 30%;
+    width: 400px;
     height: 100vh;
+
     background-color:white;
-    z-index: 40;
-    left: 0;
-    transition: all .2s;
     box-shadow: 2px 0px 10px rgb(85, 85, 85);
+    z-index: 40;
+
+    visibility: visible;
+    left: -40rem;
+    opacity: 0;
+    transition: opacity 1s,left .5s ;
+
 }
 
 .sidenav .sides{
@@ -204,7 +209,7 @@ article{
 .sidenav .sides li{
     width: 100%;
     padding: 20px;
-    list-style-type: nones;
+    list-style-type: none;
     font-size: 1.5rem;
 }
 
@@ -212,11 +217,28 @@ article{
     background-color: grey;
     cursor: pointer;
 }
+.sidenav-show{
+    left: 0;
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 1s,left .5s ;
+}
 
-.sidenav-hidden{
-    left: -20%;
-    opacity: 0;
-    transition: all .5s;
+@keyframes hideNav{
+    0%{
+        display: block;
+    }
+    1%{
+        left: 0;
+        opacity: 1;
+    }
+    99%{
+        left: -20px;
+        opacity: 0;
+    }
+    100%{
+        display: none;
+    }
 }
 
 @media screen and (max-width:1400px) {
